--- a/css/agency.css
+++ b/css/agency.css
@@ -654,8 +654,8 @@ section h3.section-subheading {
 }
 
 aside.clients img {
-    max-width: 115px;
-    height: auto;
+    max-height: 115px;
+    width: auto;
 }
 
 section#contact {
